# Android-EGL-ImGui-Hook

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  main.cpp
Customized/: Customize.h  Customized.cpp
Utils/: utils.h
Utils/Logger/: Logger.h
